# BloomDev

./: LICENSE  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
bloom/: .env  build.sh  settings.py  urls.py
bloom/bloom/: settings.py
render/: admin.py  models.py  urls.py  views.py
render/migrations/: 0001_initial.py
render/static/render/: app.js  gtag.js  main.css
render/templates/render/: add_journal.html  base.html  blog.html  bloombot.html  edit_journal.html  index.html  journal.html  login.html  privacy-policy.html  quiz.html  register.html  resources.html  todos.html
